--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Welcome</h1>
   <p>Please choose an option:</p>
-  <button onclick="window.location.href='signin.html'">I already have an account</button>
+  <button onclick="window.location.href='check-permissions.html'">I already have an account</button>
   <button onclick="window.location.href='signup.html'">Sign up for an account</button>
 </body>
 </html>
