--- a/index.html
+++ b/index.html
@@ -6,6 +6,49 @@
   <!-- Load Calcite Components -->
   <script type="module" src="https://js.arcgis.com/calcite-components/2.10.0/calcite.esm.js"></script>
   <link rel="stylesheet" href="https://js.arcgis.com/calcite-components/2.10.0/calcite.css" />
+<style>
+  /* Make the main container flexible */
+main {
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
+}
+
+/* Make the card responsive */
+calcite-card {
+  max-width: 400px;   /* limits width on desktop */
+  width: 100%;        /* full width on mobile */
+}
+
+/* Adjust font sizes on small screens */
+@media (max-width: 480px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  calcite-input,
+  calcite-button {
+    font-size: 0.9rem;
+  }
+
+  form {
+    padding: 1rem;
+  }
+}
+
+/* Optional: stack elements with spacing for very small screens */
+@media (max-width: 360px) {
+  form calcite-label {
+    margin-bottom: 0.75rem;
+  }
+
+  calcite-button {
+    padding: 0.6rem;
+  }
+}
+
+</style>
+
 </head>
 <body>
   <main style="display:flex; justify-content:center; padding:2rem;">
@@ -37,9 +80,17 @@
 
     const params = new URLSearchParams(window.location.search);
     const globalid = params.get("id");
+
+
+
     document.getElementById("signinForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const username = document.getElementById("username").value;
+
+      if (globalid === null) {
+        showMessage("No app id specified in url", "danger")
+        return
+      }
 
       try {
         const resp = await fetch("https://create-user-api-afbag0hgagazdbb3.australiasoutheast-01.azurewebsites.net/api/check-permissions", {
@@ -53,12 +104,19 @@
         if (resp.ok) {
           window.location.href = data.redirect_uri;  // ✅ redirect on success
         } else {
-          document.getElementById("message").innerText = data.message || "Error signing in";
+          showMessage(data.message || "Error signing in", "danger")
         }
       } catch (err) {
-        document.getElementById("message").innerText = "Network error: " + err.message;
+        showMessage("Network error: " + err.message, "danger")
       }
     });
+
+    function showMessage(text, kind) {
+      message.style.display = "block";
+      message.kind = kind; // "success", "danger", "info", etc.
+      message.querySelector("[slot=message]").innerText = text;
+    }
+
   </script>
 </body>
 </html>
