--- a/callback.html
+++ b/callback.html
@@ -54,31 +54,31 @@ calcite-card {
   
   Loading...
 
-  <script>
+    <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const params = new URLSearchParams(window.location.search);
+      const code = params.get("code");
+      const verifier = sessionStorage.getItem("pkce_verifier");
+      const globalid = sessionStorage.getItem("globalid");
 
-    const params = new URLSearchParams(window.location.search);
-    const code = params.get("code");
-    const verifier = sessionStorage.getItem("pkce_verifier");
-    const globalid = sessionStorage.getItem("globalid");
-
-    fetch("https://create-user-api-afbag0hgagazdbb3.australiasoutheast-01.azurewebsites.net/api/check-permissions", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ code, verifier, globalid })
-    })
-    .then(res => res.json().then(data => ({ ok: res.ok, data })))
-    .then(({ ok, data }) => {
-      if (ok) {
-        window.location.href = data.redirect_uri;  // ✅ redirect on success
-      } else {
-        showMessage(data.message || "Error signing in", "danger");
-      }
-    })
-    .catch(err => {
-      showMessage("Network error: " + err.message, "danger");
+      fetch("https://create-user-api-afbag0hgagazdbb3.australiasoutheast-01.azurewebsites.net/api/check-permissions", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ code, verifier, globalid })
+      })
+      .then(res => res.json().then(data => ({ ok: res.ok, data })))
+      .then(({ ok, data }) => {
+        if (ok) {
+          window.location.href = data.redirect_uri;
+        } else {
+          showMessage(data.message || "Error signing in", "danger");
+        }
+      })
+      .catch(err => {
+        showMessage("Network error: " + err.message, "danger");
+      });
     });
+    </script>
 
-
-  </script>
 </body>
 </html>
