--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ calcite-card {
 <body>
   <main style="display:flex; justify-content:center; padding:2rem;">
     <calcite-card style="max-width:400px; width:100%;">
-      <h1 style="text-align:center; margin-bottom:1rem;">ArcGIS Setup</h1>
+      <h1 style="text-align:center; margin-bottom:1rem;">ArcGIS Onboarding</h1>
 
         <calcite-button id="btn-signin" width="full" scale="l" style="margin-top:1rem;">
           Sign in
