Change text on sign up submit

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ calcite-card {
         </calcite-button>
 
         <calcite-button appearance="outline" href="signup.html" width="full" scale="l" style="margin-top:1rem;">
-          Sign Up
+          Sign up
         </calcite-button>
     </calcite-card>
   </main>
